z-index fixes

--- a/wp-content/themes/vantage/partystart.css
+++ b/wp-content/themes/vantage/partystart.css
@@ -1010,9 +1010,9 @@ ul.job_listings li.job_listing a {
     transition: all 300ms;
 }
 #buddypress #members-list li:hover .member-filter{
-    background-image: -webkit-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.1));
-    background-image: -moz-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.1));
-    background-image: -o-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.1));
+    background-image: -webkit-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
+    background-image: -moz-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
+    background-image: -o-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
     background-image: -ms-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
     /* background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.6)); */
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#00000000', endColorstr='#99000000');
